# GEngine3Dt

./: .gitmodules  CMakeLists.txt  README.md  for_commit.txt  naming_convention_for_project.txt
glslCode/: 1_colors.fs  1_colors.vs  1_light_cube.fs  1_light_cube.vs  fShader.txt  vShader.txt
mat/: shader001.vs  shader002.fs  shader003.fs  shader004.fs  shader004.vs  vs_shader001.txt
render/: render.cpp  render.h
res/: main_crosshair_shader.fs  main_crosshair_shader.vs
shaders/: ShaderCl.cpp  ShaderCl.h  Texture.cpp  Texture.h
src/: basics.cpp  basics.h  main.cpp
src/graphics/: LineBatch.cpp  ShaderCl.cpp  Texture.cpp  Texture.h  line_batch.cpp  marching_cube_renderer.cpp  marching_cube_renderer.h  shader.cpp  shader.h
src/helper_function/: helper_function.cpp  helper_function.h
src/marching_cubes/: chunk.cpp  chunk.h  chunks.cpp  chunks.h  marching_cubes.cpp  marching_cubes.h
src/mesh/: Mesh.cpp  Mesh.h
src/shaders/: LightCubeShader_1.fs  LightCubeShader_1.vs  ShV1.fs  ShV1.vs  Shader_1.fs  Shader_1.vs
src/story/: 001.cpp  003.cpp  004.cpp
src/temp/: temp.cpp  temp.h
src/window/: Camera.cpp  window.cpp  window.h
